Fix profile img stretching on mobile

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -294,13 +294,11 @@ a {
 
     text-align: center;
 }
-
     .profile-box img {
         width: 100%;
-        min-height: 100%;
-        height: 30vh;
+        height: 30vw;
+        max-height: 250px;
         object-fit: cover;
-        margin-bottom: 5px;
     }
 
     .profile-box a {
